force-app/main/default/objects/X360_Account_Overview__c/X360_Account_Overview__c.object-meta.xml
<CustomObject>
    <label>Customer Plan</label>
    <nameField>
        <label>Customer Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>