force-app/main/default/objects/X360_Account_Overview__c/fields/Account_Contact_Selection__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected Account-Contact Relationship</description>
    <label>Account Contact Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>