force-app/main/default/objects/X360_Account_Overview__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFP-11354 [c] - Stores Id of selected Account against which customer plan is created.</description>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Plan</relationshipLabel>
    <relationshipName>X360_Account_Overviews</relationshipName>
    <type>Lookup</type>
</CustomField>