force-app/main/default/objects/X360_Account_Overview__c/fields/Action_Plan_Selection__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected Action plans.</description>
    <label>Action Plan Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>