force-app/main/default/objects/X360_Account_Overview__c/fields/Case_Selection__c.field-meta.xml
<CustomField>
    <fullName>Case_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected cases.</description>
    <label>Case Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>