force-app/main/default/objects/X360_Account_Overview__c/fields/Contact_Selection__c.field-meta.xml
<CustomField>
    <fullName>Contact_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected contacts.</description>
    <label>Contact Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>