force-app/main/default/objects/X360_Account_Overview__c/fields/Opportunity_Selection__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected open opportunities.</description>
    <label>Opportunity Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>