force-app/main/default/objects/X360_Account_Overview__c/fields/Risk_Selection__c.field-meta.xml
<CustomField>
    <fullName>Risk_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected risks.</description>
    <label>Risk Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>