force-app/main/default/objects/X360_Account_Overview__c/fields/Task_Selection__c.field-meta.xml
<CustomField>
    <fullName>Task_Selection__c</fullName>
    <description>SFP-11354 [c] - Stores Id&apos;s of selected tasks.</description>
    <label>Task Selection</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>